@@ -82,6 +82,9 @@ BUGFIXES:
   ZOOKEEPER-538. zookeeper.async causes python to segfault
   (henry robinson via phunt)
 
+  ZOOKEEPER-542. c-client can spin when server unresponsive (Christian
+  Wiedmann via mahadev)
+ 
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
